--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
         completions."
     </string>
     <string name="title_activity_registration">Register New User</string>
+    <string name="title_activity_donation">DonationActivity</string>
 </resources>
