--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,5 +15,6 @@
         completions."
     </string>
     <string name="title_activity_registration">Register New User</string>
+    <string name="title_activity_maps">Map</string>
 
 </resources>
